# sherpa-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_sherpa.py
src/: __init__.py
src/analysis/: __init__.py  gemini_analyzer.py
src/capture/: __init__.py  screen_capture.py
src/voice/: __init__.py  sherpa_bot.py
